Fix chrome layout bugs

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -201,9 +201,10 @@ dialog {
   bottom: 0;
   left: 0;
   right: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, .9);
   z-index: 200;
-  width: 100%;
   color: white;
 }
 
@@ -220,13 +221,12 @@ dialog p {
   margin: 2em 1em;
 }
 
-fieldset {
-  border: 0;
+form .buttons {
   display: flex;
   margin-top: 1em;
 }
 
-fieldset input {
+form .buttons input {
   flex-grow: 2;
   background: black;
   padding: 1em;
@@ -235,10 +235,10 @@ fieldset input {
   color: white;
 }
 
-fieldset input#cancel-btn {
+input#cancel-btn {
   background: #222;
 }
-fieldset input#sign-in-btn {
+input#sign-in-btn {
   background: green;
 }
 
